[package]
name = "rpb"
version = "0.1.0"
description = "Discord Bot for Rust Practice Server"
repository = "https://github.com/rust-practice/rpb"
authors = ["Members of Discord Server"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
